# centralized_exchange

./: .env.example  .gitignore  Cargo.toml  Dockerfile  PHASE.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
common/: Cargo.toml
common/src/: auth.rs  error.rs  lib.rs  models.rs
helm/backpack-exchange/: Chart.yaml  values.yaml
helm/backpack-exchange/templates/: _helpers.tpl  auth-service.yaml  gateway.yaml  market-data-service.yaml  order-service.yaml  postgres.yaml  redis.yaml  secret.yaml  service.yaml  wallet-service.yaml
k8s/: kustomization.yaml  secrets.yaml
k8s/base/: kustomization.yaml  namespace.yaml
k8s/infra/: kustomization.yaml  postgres-init-configmap.yaml  postgres-statefulset.yaml  redis-deployment.yaml
k8s/services/: auth-deployment.yaml  gateway-deployment.yaml  market-data-deployment.yaml  order-deployment.yaml  wallet-deployment.yaml
services/auth/: Cargo.toml
services/auth/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs
services/auth/src/handlers/: api_keys.rs  auth.rs  mod.rs
services/auth/tests/: auth_tests.rs
services/gateway/: Cargo.toml
services/gateway/src/: config.rs  lib.rs  main.rs
services/gateway/src/middleware/: jwt.rs  rate_limiter.rs
services/gateway/tests/: gateway_tests.rs
services/market-data-service/: Cargo.toml
services/market-data-service/src/: config.rs  db.rs  error.rs  main.rs  models.rs
services/market-data-service/src/handlers/: market_data.rs
services/matching-engine/: Cargo.toml
services/matching-engine/src/: engine.rs  events.rs  kafka.rs  lib.rs  order_book.rs
services/order-service/: Cargo.toml
services/order-service/src/: config.rs  db.rs  engine_client.rs  error.rs  lib.rs  main.rs  models.rs
services/order-service/src/handlers/: mod.rs  orders.rs  ws.rs
services/wallet-service/: Cargo.toml
services/wallet-service/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs
services/wallet-service/src/handlers/: wallet.rs
sql/: 0001_init.sql  0002_orders_trades.sql  0003_wallet.sql
