[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
backpack-common = { path = "../../common" }
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
validator = { version = "0.16", features = ["derive"] }
futures-util = "0.3"
dotenvy = "0.15"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
