[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
backpack-common = { path = "../../common" }
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
futures-util = "0.3"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
