[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
backpack-common = { path = "../../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1"
async-trait = "0.1"
